# emurgo-project

./: CHANGELOG.md  LICENSE  README.md  nim.cabal
app/: Main.hs  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: nim-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/environment.-23664/: .ghc.environment.x86_64-linux-8.10.7
src/: Board.hs  Nim.hs
