cabal-version:      2.4
name:               nim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             srinathLN7
maintainer:         srinath0393@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-all
    build-depends:      base ^>=4.14.3.0, ansi-terminal 
    default-language:   Haskell2010
    ghc-options:        -Wall


library
    import:             common-all
    exposed-modules:    Nim   
    hs-source-dirs:     src 

executable nim
    import:             common-all
    main-is:            Main.hs
    other-modules:      Nim, Board  
    hs-source-dirs:     app, src

    
